--- a/friends.html
+++ b/friends.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
     />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Friends | KaKao Clone</title>
   </head>
 
@@ -20,6 +21,8 @@
       <div class="status-bar__column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">100%</span>
         <i class="fas fa-battery-full"></i>
       </div>
     </div>
