--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+  <link rel="stylesheet" href="css/styles.css">
   <title>Chats | KaKao Clone</title>
 </head>
 
@@ -18,6 +19,8 @@
     <div class="status-bar__column">
       <i class="fas fa-clock"></i>
       <i class="fas fa-volume-mute"></i>
+      <i class="fas fa-wifi"></i>
+      <span class="status-bar__battery-level">100%</span>
       <i class="fas fa-battery-full"></i>
     </div>
   </div>
@@ -35,20 +38,22 @@
   <main class="chats">
     <ul class="chats__list">
       <li class="chats__chat chat">
-        <div class="chat__column">
-          <img src="images/a12.jpg" class="chat__avatar g-avatar">
-          <div class="chat__content">
-            <span class="chat__username">
-              Lynn
-            </span>
-            <span class="chat__preview">
-              Going Home
-            </span>
+        <a href='chat.html'>
+          <div class="chat__column">
+            <img src="images/a12.jpg" class="chat__avatar g-avatar">
+            <div class="chat__content">
+              <span class="chat__username">
+                Lynn
+              </span>
+              <span class="chat__preview">
+                Going Home
+              </span>
+            </div>
           </div>
-        </div>
-        <div class="chat__column">
-          <span class="chat__timestamp">Yesterday</span>
-        </div>
+          <div class="chat__column">
+            <span class="chat__timestamp">Yesterday</span>
+          </div>
+        </a>
       </li>
     </ul>
   </main>
