--- a/friends.html
+++ b/friends.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
     />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Friends | KaKao Clone</title>
   </head>
 
@@ -58,7 +58,7 @@
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/a12.jpg" class="g-avatar friend__avatar" />
+            <img src="images/a12.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Nicolas serrano
@@ -72,7 +72,7 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/a12.jpg" class="g-avatar friend__avatar" />
+            <img src="images/a12.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Nicolas serrano
