--- a/friends.html
+++ b/friends.html
@@ -39,7 +39,7 @@
 
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend friend">
           <div class="friend__column">
             <img src="images/a12.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
