--- a/more.html
+++ b/more.html
@@ -78,9 +78,9 @@
       </ul>
     </header>
 
-    <section class="more_seggestions">
-      <h5 class="more__title">Suggestion</h5>
-      <ul class="more__suggestion-list">
+    <section class="more__suggestions">
+      <h5 class="more__title">Suggestions</h5>
+      <ul class="more__suggestions-list">
         <li class="more__suggestion suggestion">
           <span class="suggestion__icon"><i class="fas fa-quote-right fa-2x"></i></span>
           <span class="suggestion__title">Kakao stroy</span>
