--- a/settings.html
+++ b/settings.html
@@ -62,7 +62,35 @@
                         <i class="far fa-user"></i>
                     </span>
                     <span class="setting__title">
-                        Version
+                        Friend
+                    </span>
+                </li>
+            </ul>
+        </section>
+        <section class='settings__sections'>
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <span class="setting__title">
+                        Privacy
+                    </span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-bell"></i>
+                    </span>
+                    <span class="setting__title">
+                        Notification
+                    </span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-user"></i>
+                    </span>
+                    <span class="setting__title">
+                        Friend
                     </span>
                 </li>
             </ul>
