--- a/chat.html
+++ b/chat.html
@@ -51,19 +51,18 @@
         <li class="incoming-message message">
           <img src="images/a12.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
-            <span class="message__author">Best Friend</span>
-            <div class="message__bubble">
+            <span class="message__bubble">
               Congrats I love you
-            </div>
+            </span>
+            <span class="message__author">Best Friend</span>
           </div>
-          <span class="message__timestamp"></span>
         </li>
-        <li class="incoming-message message">
+        <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <div class="message__bubble">
-              Thank u
-            </div>
+            <span class="message__bubble">
+              Thank u ~!! see u soon
+            </span>
           </div>
         </li>
       </ul>
