--- a/chat.html
+++ b/chat.html
@@ -60,7 +60,6 @@
           </div>
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
               Thank u ~!! see u soon
@@ -77,7 +76,6 @@
           </div>
         </li>
         <li class="sent-message message">
-          <span class="message__timestamp"></span>
           <div class="message__content">
             <span class="message__bubble">
               Thank u ~!! see u soon
@@ -88,14 +86,23 @@
     </main>
 
     <div class="chat__write--container">
-      <input type="text" placeholder="Send Message" class="chat__write" />
+      <input
+        class="chat__write"
+        type="text"
+        placeholder="Send Message"
+        class="chat__write"
+      />
 
       <div class="chat__icon-left chat__icon">
         <i class="far fa-plus-square"></i>
       </div>
       <div class="chat__icon-right chat__icon">
-        <span class="chat__write-icon"><i class="far fa-smile-wink"></i></span>
-        <span class="chat__write-icon"><i class="fas fa-microphone"></i></span>
+        <span class="chat__write-icon">
+          <i class="far fa-smile-wink"> </i
+        ></span>
+        <span class="chat__write-icon">
+          <i class="fas fa-microphone"> </i
+        ></span>
       </div>
     </div>
   </body>
