--- a/chat.html
+++ b/chat.html
@@ -105,5 +105,8 @@
         ></span>
       </div>
     </div>
+    <div class="bigScreen">
+      <span class="bigScreen_text">Please make your screen small</span>
+    </div>
   </body>
 </html>
