--- a/chat.html
+++ b/chat.html
@@ -106,7 +106,7 @@
       </div>
     </div>
     <div class="bigScreen">
-      <span class="bigScreen_text">Please make your screen small</span>
+      <span class="bigScreen_text">Please make your screen small👍</span>
     </div>
   </body>
 </html>
