--- a/friends.html
+++ b/friends.html
@@ -117,7 +117,7 @@
       </ul>
     </nav>
     <div class="bigScreen">
-      <span class="bigScreen_text">Please make your screen small</span>
+      <span class="bigScreen_text">Please make your screen small👍</span>
     </div>
   </body>
 </html>
