--- a/more.html
+++ b/more.html
@@ -136,7 +136,7 @@
       </ul>
     </nav>
     <div class="bigScreen">
-      <span class="bigScreen_text">Please make your screen small</span>
+      <span class="bigScreen_text">Please make your screen small👍</span>
     </div>
   </body>
 </html>
