--- a/settings.html
+++ b/settings.html
@@ -98,7 +98,7 @@
       </section>
     </main>
     <div class="bigScreen">
-      <span class="bigScreen_text">Please make your screen small</span>
+      <span class="bigScreen_text">Please make your screen small👍</span>
     </div>
   </body>
 </html>
